syntax = "proto3";
package issuer_pb;

import "common.proto";

message Issuance {
    string signature = 1;
    string issuer_public_key = 2;
    string recipient_public_key = 3;
    ProofOfIntegrity proof_of_integrity_hash = 7;
}
